@@ -1,5 +1,7 @@
 ggplot2 0.6.1
 ----------------------------------------
+
+  * ggsave now correctly uses dpi for raster devices, default dpi changed to 72 (thanks to Brian Ripley for pointing this out)
   * qplot now does a better of building the data frame when not explicitly supplied
   * qplot now treats any arguments wrapped in I() as parameters, not aesthetics:
     * qplot(mpg, wt, data=mtcars, colour = I("red"))
